# crossdev-stages

./: .gitignore  Cargo.toml  README.md  RUST_DEPENDENCY_ANALYSIS.md  RUST_DEVELOPER_GUIDE.md  RUST_DOCUMENTATION_INDEX.md  RUST_PORTING_CHECKLIST.md  RUST_PORTING_COMPLETE_GUIDE.md  RUST_PORTING_PLAN.md  RUST_PORTING_STATUS.md  RUST_PORTING_SUMMARY.md  RUST_SIMPLIFIED_PLAN.md  chroot-stage.sh  cross-stage.sh  genimage.cfg  make-image.sh  make_image.sh  mkstage1.sh  sandbox-stage.sh  test-config.sh  test-platform-config.sh
.github/workflows/: check.yml  lint.yml  release.yml  weekly-images.yml
boards/blackhole/: board.conf  board.sh  genimage.cfg  override-assemble.sh  post-assemble.sh  target-packages.txt
boards/defaults/: target-packages.txt
boards/k1/: board.conf  board.sh  board.toml  genimage.cfg  post-assemble.sh  sandbox-packages.txt
boards/k1-upstream/: board.conf  genimage.cfg
boards/k230/: README.md  board.conf  board.sh  board.toml  genimage.cfg  make-k230-firmware.py  make-k230-firmware.sh  post-assemble.sh  sandbox-packages.txt  target-packages.txt
boards/k3/: board.conf  bundle.list  fastboot.yaml  flash.sh  genimage.cfg  override-kernel.sh  partition_4M.json  partition_universal.json  post-assemble.sh  target-packages.txt
boards/k3/firmware/: esos.itb  fw_dynamic.itb  u-boot.itb
boards/ky-x1/: board.conf  board.sh  board.toml  boot.cmd  genimage.cfg  post-assemble.sh  sandbox-packages.txt  target-packages.txt
boards/odroid-c2/: board.conf  genimage.cfg  post-assemble.sh  post-bootloader.sh
boards/odroid-c4/: board.conf  genimage.cfg  post-assemble.sh  post-bootloader.sh  target-packages.txt
boards/odroid-m1/: board.conf  genimage.cfg  post-assemble.sh
boards/odroid-m1s/: board.conf  genimage.cfg  override-bootloader.sh  post-assemble.sh
boards/odroid-m2/: board.conf  genimage.cfg  override-bootloader.sh  override-checkout.sh  post-assemble.sh
boards/pentium-mmx/: board.conf  genimage.cfg  post-assemble.sh  sandbox-packages.txt  sandbox-packages.use  target-packages.txt
boards/premier-p550/: README.md  board.conf  genimage.cfg  override-kernel.sh  post-assemble.sh  sandbox-packages.txt  sandbox-packages.use
boards/spacemit-k1/: board.toml
boards/zhihe-a210/: README.md  board.conf  flash.sh  genimage.cfg  override-kernel.sh  post-assemble.sh  sandbox-packages.txt  target-packages.txt
boards/zhihe-a210/firmware/: README.md
config/: genimage-k1.cfg
crossdev-stages/: Cargo.toml  build.rs
crossdev-stages-rust/: Cargo.toml  SANDBOX_STATE_TRACKING.md  VIBE.md  devstral-2-crash.tar.xz  test_debug  test_debug.rs
crossdev-stages-rust/crates/crossdev-cache/: Cargo.toml
crossdev-stages-rust/crates/crossdev-cache/src/: lib.rs
crossdev-stages-rust/crates/crossdev-cli/: Cargo.toml
crossdev-stages-rust/crates/crossdev-cli/src/: arch.rs  crossdev.rs  main.rs  stage.rs
crossdev-stages-rust/crates/crossdev-config/: Cargo.toml
crossdev-stages-rust/crates/crossdev-config/src/: lib.rs
crossdev-stages-rust/crates/crossdev-core/: Cargo.toml
crossdev-stages-rust/crates/crossdev-core/src/: crossdev.rs  lib.rs  packages.rs
crossdev-stages-rust/crates/crossdev-image/: Cargo.toml
crossdev-stages-rust/crates/crossdev-image/src/: builder.rs  lib.rs  repositories.rs
crossdev-stages-rust/crates/crossdev-sandbox/: Cargo.toml
crossdev-stages-rust/crates/crossdev-sandbox/src/: docker_wrapper.rs  lib.rs
crossdev-stages-rust/crates/crossdev-stage3/: Cargo.toml
crossdev-stages-rust/crates/crossdev-stage3/src/: lib.rs  registry.rs
crossdev-stages-rust/crates/crossdev-stages/: Cargo.toml
crossdev-stages-rust/crates/crossdev-stages/src/: cache.rs  error.rs  lib.rs  stage3.rs
crossdev-stages-rust/crates/crossdev-utils/: Cargo.toml
crossdev-stages-rust/crates/crossdev-utils/examples/: gentoo_arch_demo.rs
crossdev-stages-rust/crates/crossdev-utils/src/: arch.rs  bubblewrap.rs  ldconfig.rs  lib.rs
crossdev-stages/config/: build.conf  crossdev-extra-packages.txt  host-bin-packages.txt  host-packages.txt
crossdev-stages/config/arch/: aarch64.conf  riscv64.conf  x86_64.conf
crossdev-stages/config/portage/default/env/: plain.conf
crossdev-stages/config/portage/default/package.use/: git
crossdev-stages/portage/default/: host-packages.txt
crossdev-stages/portage/default/package.accept_keywords/: gcc
crossdev-stages/portage/default/package.env/: rust
crossdev-stages/portage/default/package.use/: busybox
crossdev-stages/src/: board.rs  cflags.rs  container.rs  error.rs  image.rs  lib.rs  main.rs  manifest.rs  package_list.rs  portage.rs  sandbox.rs  source_cache.rs  stage.rs  sysroot.rs  target.rs  workspace.rs
crossdev-stages/src/bootloader/: amlogic_fip.rs  grub.rs  mod.rs  opensbi.rs  rkbin.rs  syslinux.rs  tfa.rs  uboot.rs
crossdev-stages/src/cli/: board.rs  image.rs  maint.rs  mod.rs  sandbox.rs  stages.rs  status.rs  store.rs  target.rs  update.rs  util.rs
crossdev-stages/src/cli/handlers/: image.rs  maint.rs  mod.rs  sandbox.rs  status.rs  target.rs
defaults/: sandbox-packages.txt  target-packages.txt
defaults/scripts/: grow-rootfs.initd
docs/: COMPLETE_REFACTORING_GUIDE.md  DEMO_KEY_IMPROVEMENTS.md  README.md  REFACTORING_SUMMARY.md  USAGE_EXAMPLES.md  cli-roadmap.md  configuration.md  design.md  k230-heterogeneous-cores.md
lib/: board.sh  common.sh  sysroot.sh  toml2env.py
patches/libmicrohttpd/: libmicrohttpd-1.0.3.ebuild
