[package]
name = "crossdev-stages"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "crossdev-stages"
path = "src/main.rs"

[dependencies]
hakoniwa      = "1.4"
gentoo-stages = "0.4"
sokgi         = { git = "https://github.com/OctopusET/sokgi" }
camino        = "1"
clap         = { version = "4", features = ["derive", "color"] }
tokio        = { version = "1", features = ["full"] }
anyhow       = "1"
thiserror    = "2"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde        = { version = "1", features = ["derive"] }
toml         = "0.8"
chrono       = { version = "0.4", features = ["serde"] }
num_cpus     = "1"
libc         = "0.2"
