[package]
name = "crossdev-stages"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "crossdev-stages"
path = "src/main.rs"

[dependencies]
hakoniwa      = "1.7"
gentoo-stages = "0.5"
camino        = "1"
clap         = { version = "4", features = ["derive", "color"] }
tokio        = { version = "1", features = ["full"] }
anyhow       = "1"
thiserror    = "2"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde        = { version = "1", features = ["derive"] }
toml         = "1.1"
chrono       = "0.4"
num_cpus     = "1"
libc         = "0.2"
portage-atom = "0.10"
