[package]
name = "crossdev-cache"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
etcetera = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
walkdir = "2.3"
sha2 = "0.10"
tokio = { version = "1.0", features = ["fs"] }

[dev-dependencies]
tempfile = "3.3"
