[package]
name = "crossdev-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "crossdev-stages"
path = "src/main.rs"

[dependencies]
clap.workspace = true
crossdev-stages = { path = "../crossdev-stages" }
crossdev-config = { path = "../crossdev-config" }
crossdev-core = { path = "../crossdev-core" }
crossdev-image = { path = "../crossdev-image" }
crossdev-sandbox = { path = "../crossdev-sandbox" }
crossdev-utils = { path = "../crossdev-utils" }
thiserror.workspace = true
log.workspace = true
env_logger.workspace = true
tokio.workspace = true
atty = "0.2"
bollard = { version = "0.16", features = ["buildkit"] }
glob = "0.3"
jiff = "0.1"

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true