[package]
name = "crossdev-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
config.workspace = true
toml.workspace = true
crossdev-utils = { path = "../crossdev-utils", features = ["serde"] }

[dev-dependencies]
mockall.workspace = true
tempfile = "3.3"