[package]
name = "crossdev-sandbox"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Container backends
bollard = { version = "0.16", optional = true }  # Docker API
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures-util = "0.3"
thiserror = "1.0"
log = "0.4"

# Date/time handling
jiff = "0.2"

# Shell escaping
shell-escape = "0.1"





[features]
default = ["docker", "bubblewrap"]
docker = ["bollard"]
bubblewrap = []

[dev-dependencies]
tempfile = "3.8"
