[package]
name = "crossdev-stage3"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror.workspace = true
crossdev-config = { path = "../crossdev-config" }
log.workspace = true
command-group.workspace = true
tokio.workspace = true

[dev-dependencies]
mockall.workspace = true
tempfile = "3.3"