[package]
name = "crossdev-stages"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Cache dependencies (from crossdev-cache)
etcetera = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
walkdir = "2.3"
sha2 = "0.10"

# Stage3 dependencies (from crossdev-stage3)
toml = "0.8"
crossdev-config = { path = "../crossdev-config" }
command-group.workspace = true

# Shared dependencies
tokio.workspace = true

[dev-dependencies]
tempfile = "3.3"
mockall.workspace = true