[package]
name = "crossdev-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
log.workspace = true
command-group.workspace = true
nix = "0.26"
users = "0.11"

[dev-dependencies]
mockall.workspace = true